--- a/css/main.css
+++ b/css/main.css
@@ -28,6 +28,9 @@ p {
     line-height: 1.4em;
     color: #333;
 }
+img {
+    width: 70%;
+}
 footer {
     border-top: 1px solid #d5d5d5;
     font-size: .8em;
